--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: "Cairo", sans-serif;
+  /*font-family: "Cairo", sans-serif;*/
+  font-family: "Press Start 2P", cursive;
   font-weight: 300;
   color: #3e3e3e;
   background: #011821;
