--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 0;
-  /*font-family: "Cairo", sans-serif;*/
-  /*font-family: "Press Start 2P", cursive;*/
   font-family: "Exo 2", sans-serif;
 
   color: #3e3e3e;
@@ -30,14 +30,13 @@ input {
 
 @keyframes MoveUp {
   0% {
-    transform: translateY(0);
+    transform: translate(-50%, 0);
   }
   100% {
-    transform: translateY(-80px);
+    transform: translate(-50%, -80px);
   }
 }
 
 .number-flow {
   animation: MoveUp 1.3s linear;
-  transform: translateX(-50%);
 }
